--- a/index.html
+++ b/index.html
@@ -1,45 +1,15 @@
 <html>
-<head>
-    <title>
-    Ching chooong
-    </title><script>
-    var today = new Date();
-        var day = today.getDay();
-        var daylist = ["sunday","monday","tuesday","wednesday","thursday","friday","saturday"];
-    console.log("Today is : " + daylist[day] + ".");
-        var hour = today.getHours();
-        var minute = today.getMinutes();
-        var second = today.getSeconds();
-        var prepand = (hour >= 12)? " PM ":" AM ";
-        hour = (hour >= 12)? hour - 12: hour;
-        if (hour===0 && prepand===' PM ')
-            {
-                if (minute==0 && second===0)
-                {
-                 hour=12;
-                    prepand=' Noon';
-                }
-                else
-                    {
-                        hour=12;
-                        prepand=' PM';
-                    }
-            }
-    if (hour==0 && prepand===' AM')
-        {
-            if (minute===0 && second===0)
-                {
-                    hour=12;
-                    prepand=' midnight';
-                }
-            else
-                {
-                    hour=12;
-                    prepand=' AM';
-                    
-                }
-        }
-    
-    </script>
+    <head>
+    <meta charset="uts-8">
+        <title>area of triangle</title>
+        <script>
+        var side1 = 5;
+        var side2 = 6;
+        var side3 = 7;
+        var s = (side1 + side2 + side3)/2;
+        var area = Math.sqrt(s*((s-side1)*(s-side2)*(s-side3)));
+            console.log("Area: ", area);
+        </script>
     </head>
+    <h3>area of triangle</h3>
 </html>
