--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
-    <head>
-    <meta charset="uts-8">
-        <title>area of triangle</title>
-        <script>
-        var side1 = 5;
-        var side2 = 6;
-        var side3 = 7;
-        var s = (side1 + side2 + side3)/2;
-        var area = Math.sqrt(s*((s-side1)*(s-side2)*(s-side3)));
-            console.log("Area: ", area);
-        </script>
+
+<head>
+    <meta charset="utf-8">
+    <title>find lead year</title>
+    <script>
+    year = window.prompt("Input a year: ");
+        x= (year % 100 === 0) ? (year % 400 === 0) : (year % 4 === 0);
+    
+    </script>
     </head>
-    <h3>area of triangle</h3>
+    <body>
+    <h3> find leap yr</h3>
+    </body>
 </html>
